@@ -26,6 +26,7 @@ preferences via Manage->Options.
 [] Selecting hexadecimal passwords as the database policy no longer causes validation
 to fail.
 [] Toolbar now updated to reflect R/W or R-O mode when user dynamically changes mode.
+[] Correctly show database has been modified (to allow saving) if database preferences have been changed.
 
 New Features for 3.26
 =====================
